feat(role): refactor role management; update Role, RoleDTO, and related classes to use records and improve method signatures